fix(chart): controls button gap

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -140,6 +140,7 @@ table {
 
 .controls {
   display: flex;
+  gap: 8px;
   align-items: center;
   margin-left: auto;
 
